# MyClaude

./: .baseline-inventory.txt  .claudeignore  .gitignore  .markdown-link-check.json  .markdownlint.json  .readthedocs.yaml  AGENTS_LIST.md  AGENTS_LIST.tex  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  COMMANDS_LIST.md  COMMANDS_LIST.tex  ECOSYSTEM_REPORT.md  LATEX_README.md  MIGRATION.md  Makefile  PLUGIN_CHEATSHEET.md  PLUGIN_INSTALLATION.md  README.md  UPGRADE_REPORT.md  V1.0.1_RELEASE_SUMMARY.md  ecosystem_capabilities.json  generate-metadata.sh  latex_compile.sh  optimize_artifacts.py  pyproject.toml  setup-marketplace.sh  test_gen.py  validate_plugins.py  validate_plugins_v2.py  verify_refactor.py
.agent/: COMPREHENSIVE_REVIEW_REPORT.md  TECH_DEBT_REPORT.md  skills_index.json
.claude-plugin/: marketplace.json
.reports/: AGENT_ENHANCEMENTS_QUICK_REFERENCE.md  AGENT_OPTIMIZATION_SUMMARY.md  ANALYSIS_SUMMARY.md  CHANGES_DETAILED.md  EXECUTIVE_SUMMARY.md  FULL_STACK_OPTIMIZATION_INDEX.md  NLSQ-PRO-QUICK-REFERENCE.md  NLSQ_PRO_INDEX.md  NLSQ_PRO_OPTIMIZATION_COMPLETE.md  NLSQ_PRO_QUICK_REFERENCE.md  OPTIMIZATION_SUMMARY.md  README.md  README_NLSQ_PRO_OPTIMIZATION.md  TEMPLATE_STRUCTURE.md  agent-optimization-summary.md  ai-engineer-improvement-2025-12-03.md  all-agents-health-2025-12-03.json  batch-optimization-2025-12-03.md  ml-engineer-agent-analysis.md  ml-engineer-improvement-examples.md  ml-engineer-v1.0.4-test-results.md  nlsq-pro-implementation-report.md  nlsq-pro-optimization-summary.md
.serena/: project.yml
Agent_backup/: AGENT_TEMPLATE.md  command-systems-engineer.md  research-intelligence-master.md
Backup/: plugins_and_skills_analysis.md
agents/: AGENTS_QUICK_START.md  AGENT_TEMPLATE.md  accessibility-tester.md  advanced-quantum-computing-expert.md  ai-ml-specialist.md  ai-systems-architect.md  api-designer.md  api-documenter.md  ar-vr-scientific-visualization-expert.md  architect-reviewer.md  backend-developer.md  build-engineer.md  c-expert.md  cli-developer.md  code-logic-reviewer.md  code-quality-master.md  command-systems-engineer.md  compliance-auditor.md  context-manager.md  correlation-function-expert.md  cpp-pro.md  crystallography-diffraction-expert.md  data-analyst.md  data-engineer.md  data-engineering-coordinator.md  data-loading-expert.md  data-professional.md  data-researcher.md  data-scientist.md  database-workflow-engineer.md  deployment-engineer.md  devops-engineer.md  devops-security-engineer.md  digital-twins-expert.md  documentation-architect.md  experiment-manager.md  (+51 more)
agents/scientific-computing-agents/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  QUICKSTART.md  README.md  base_agent.py  computational_models.py  example_complete_workflow.py  pyproject.toml  requirements-dev.txt
agents/scientific-computing-agents/.github/workflows/: ci.yml  publish.yml
agents/scientific-computing-agents/agents/: algorithm_selector_agent.py  executor_validator_agent.py  integration_agent.py  linear_algebra_agent.py  ode_pde_solver_agent.py  optimization_agent.py  performance_profiler_agent.py  special_functions_agent.py  surrogate_modeling_agent.py  workflow_orchestration_agent.py
agents/scientific-computing-agents/archive/improvement-plans/: ULTRATHINK_PHASE5_EXECUTION_SUMMARY.md
agents/scientific-computing-agents/archive/phases/phase-1/: PHASE1_COMPLETE.md
agents/scientific-computing-agents/archive/phases/phase-2/: PHASE2_COMPLETE.md  PHASE2_PROGRESS.md
agents/scientific-computing-agents/archive/phases/phase-3/: PHASE3_DOUBLECHECK_FINAL.md
agents/scientific-computing-agents/archive/phases/phase-4/: PHASE4_OVERALL_SUMMARY.md  PHASE4_PLAN.md  PHASE4_VERIFICATION_REPORT.md  PHASE4_WEEK17_SUMMARY.md  PHASE4_WEEK18_FINAL_SUMMARY.md  PHASE4_WEEK18_PROGRESS.md  PHASE4_WEEK19_FINAL_SUMMARY.md  PHASE4_WEEK19_PLAN.md  PHASE4_WEEK19_PROGRESS.md
agents/scientific-computing-agents/archive/phases/phase-5/cancelled/: PHASE5A_WEEK4_FEEDBACK_FRAMEWORK.md  PHASE5A_WEEKS3-4_PLAN.md  PHASE5_RECOMMENDATIONS.md
agents/scientific-computing-agents/archive/phases/phase-5/infrastructure/: PHASE5A_COMPLETE_SUMMARY.md  PHASE5A_WEEK1_SUMMARY.md  PHASE5A_WEEK2_SUMMARY.md
agents/scientific-computing-agents/archive/planning/: REORGANIZATION_PLAN_ULTRATHINK.md  REORGANIZATION_VERIFICATION_REPORT.md
agents/scientific-computing-agents/archive/reports/final/: PROJECT_COMPLETE.md
agents/scientific-computing-agents/archive/reports/verification/: DOUBLE_CHECK_FINAL_REPORT.md  PHASE5_DOUBLE_CHECK_VERIFICATION_REPORT.md
agents/scientific-computing-agents/docs/: README.md
agents/scientific-computing-agents/docs/deployment/: production.md
agents/scientific-computing-agents/docs/development/: LINK_VALIDATION.md
agents/scientific-computing-agents/docs/user-guide/: OPTIMIZATION_GUIDE.md  USER_ONBOARDING.md
agents/scientific-computing-agents/examples/: example_02_linear_algebra.py  example_07_surrogate_modeling.py  example_2d_heat.py  example_3d_poisson.py  example_profiling_pde.py  inverse_problems_bayesian.py  workflow_01_optimization_pipeline.py  workflow_04_ml_enhanced.py
agents/scientific-computing-agents/monitoring/: prometheus.yml
agents/scientific-computing-agents/monitoring/alerts/: system_alerts.yml
agents/scientific-computing-agents/numerical_kernels/: optimization.py
agents/scientific-computing-agents/scripts/: benchmark.py
agents/scientific-computing-agents/status/: CURRENT_STATUS_AND_NEXT_ACTIONS.md  INDEX.md
agents/scientific-computing-agents/tests/: test_integration_agent.py  test_ode_pde_solver_agent.py  test_optimization_agent.py  test_physics_informed_ml_agent.py  test_problem_analyzer_agent.py  test_surrogate_modeling_agent.py  test_uncertainty_quantification_agent.py  test_workflow_orchestration_agent.py
plugins/python-development/skills/python-packaging/references/example-package/: README.md  pyproject.toml
plugins/python-development/skills/python-packaging/references/example-package/src/example_package/: __init__.py  core.py
plugins/python-development/skills/python-packaging/references/example-package/tests/: __init__.py  test_core.py
(+2977 files in other folders)
