[project]
name = "myclaude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
science = [
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "scipy>=1.11.0",
]
docs = [
    "sphinx>=8.1.3",
    "docutils>=0.21.2",
    "furo>=2024.8.6",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-multiversion>=0.2.4",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=4.0.1",
    "jinja2>=3.1.6",
    "pygments>=2.19.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "interrogate>=1.7.0",
]

[tool.uv]
default-groups = ["dev", "docs", "science"]
