[project]
name = "myclaude"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "black>=26.1.0",
]
science = [
    "numpy>=2.4.1",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]
docs = [
    "sphinx>=9.1.0",
    "docutils>=0.21.2",
    "furo>=2025.12.19",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-multiversion>=0.2.4",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=5.0.0",
    "jinja2>=3.1.6",
    "pygments>=2.19.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "interrogate>=1.7.0",
]

[tool.uv]
default-groups = ["dev", "docs", "science"]
