[project]
name = "myclaude"
version = "3.3.0"
description = "Claude Code plugin suite with 24 expert agents, 14 registered commands, and 26 hub skills routing to 180 sub-skills for AI-powered development, scientific computing, and research workflows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "black>=26.1.0",
    "types-pyyaml>=6.0.12.20260408",
    "pip-audit>=2.10.0",
]
science = [
    "numpy>=2.4.1",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
]
docs = [
    "sphinx>=9.1.0",
    "docutils>=0.22.4",
    "furo>=2025.12.19",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
    "sphinx-multiversion>=0.2.4",
    "sphinx-tabs>=3.4.7",
    "myst-parser>=5.0.0",
    "jinja2>=3.1.6",
    "pygments>=2.19.2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "docstr-coverage>=2.3",
]

[tool.uv]
default-groups = ["dev", "docs", "science"]

[tool.mypy]
explicit_package_bases = true
exclude = ["plugins/.*/hooks/", "test-corpus/"]

[tool.ruff]
# Skill-validator fixtures import scientific libraries that aren't installed
# in this project (jax, numpyro, optax, ...). The files exist as text patterns
# for the validator's matcher, not as runnable code.
exclude = ["test-corpus/"]

[tool.setuptools]
packages = ["tools"]
